Fixed zookeeper configuration and a bug related to creating new files.